# BigClass

./: CMakeLists.txt  big.cpp  big.h  main.cpp
